Added ML Feature importance visualization

--- a/docs/examples/candlestick/pattern_visualization.ipynb
+++ b/docs/examples/candlestick/pattern_visualization.ipynb
@@ -10029,6 +10029,296 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## 3. Machine Learning Integration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Machine Learning Integration\n",
+    "def create_ml_visualization_examples(data, config):\n",
+    "    \"\"\"Create examples of machine learning integration for visualization\"\"\"\n",
+    "    \n",
+    "    # Function to generate simple ML predictions (for demonstration)\n",
+    "    def generate_simple_predictions(data, window=20, future_days=20):\n",
+    "        \"\"\"Generate simple ML predictions based on moving averages\"\"\"\n",
+    "        # Create a copy of the data\n",
+    "        df = data.copy()\n",
+    "        \n",
+    "        # Add features\n",
+    "        df['SMA20'] = df['Close'].rolling(window=20).mean()\n",
+    "        df['SMA50'] = df['Close'].rolling(window=50).mean()\n",
+    "        df['SMA200'] = df['Close'].rolling(window=200).mean()\n",
+    "        df['EMA20'] = df['Close'].ewm(span=20, adjust=False).mean()\n",
+    "        \n",
+    "        # Calculate relative strength (simple version)\n",
+    "        df['RS'] = df['Close'] / df['SMA50']\n",
+    "        \n",
+    "        # Calculate volatility\n",
+    "        df['Volatility'] = df['Close'].pct_change().rolling(window=20).std()\n",
+    "        \n",
+    "        # Calculate future returns (this is what we'll \"predict\")\n",
+    "        df['Future_Return'] = df['Close'].pct_change(future_days).shift(-future_days)\n",
+    "        \n",
+    "        # Create a simple \"prediction\" model (this is for visualization only)\n",
+    "        # In a real application, you would use actual ML models like Prophet, ARIMA, or ML libraries\n",
+    "        \n",
+    "        # Create target and features\n",
+    "        y = df['Future_Return'].dropna()\n",
+    "        X = df.loc[y.index, ['SMA20', 'SMA50', 'SMA200', 'EMA20', 'RS', 'Volatility']].dropna()\n",
+    "        \n",
+    "        # Keep only rows with complete data\n",
+    "        common_idx = X.index.intersection(y.index)\n",
+    "        X = X.loc[common_idx]\n",
+    "        y = y.loc[common_idx]\n",
+    "        \n",
+    "        # Create \"predictions\" using a simple rule (for demonstration only)\n",
+    "        # In reality, you would train an actual model here\n",
+    "        predictions = pd.Series(index=X.index)\n",
+    "        predictions[X['SMA20'] > X['SMA50']] = 0.02  # Predict 2% up when SMA20 > SMA50\n",
+    "        predictions[X['SMA20'] <= X['SMA50']] = -0.01  # Predict 1% down when SMA20 <= SMA50\n",
+    "        \n",
+    "        # Add extra signal adjustments for demonstration\n",
+    "        predictions[X['RS'] > 1.05] += 0.01  # Add 1% for strong relative strength\n",
+    "        predictions[X['Volatility'] > X['Volatility'].mean()] -= 0.005  # Subtract for high volatility\n",
+    "        \n",
+    "        # Generate \"future\" predictions for dates beyond our data\n",
+    "        last_date = df.index[-1]\n",
+    "        future_dates = [last_date + pd.Timedelta(days=i) for i in range(1, future_days + 1)]\n",
+    "        future_predictions = pd.Series(\n",
+    "            [predictions.iloc[-1]] * future_days,  # Just use the last prediction for simplicity\n",
+    "            index=future_dates\n",
+    "        )\n",
+    "        \n",
+    "        # Create \"confidence intervals\" (for demonstration)\n",
+    "        volatility = df['Volatility'].iloc[-1]\n",
+    "        upper_band = future_predictions + volatility * 2\n",
+    "        lower_band = future_predictions - volatility * 2\n",
+    "        \n",
+    "        # Return the \"model\" results\n",
+    "        return {\n",
+    "            'historical': {\n",
+    "                'actual': y,\n",
+    "                'predicted': predictions\n",
+    "            },\n",
+    "            'future': {\n",
+    "                'dates': future_dates,\n",
+    "                'predictions': future_predictions,\n",
+    "                'upper_band': upper_band,\n",
+    "                'lower_band': lower_band\n",
+    "            }\n",
+    "        }\n",
+    "    \n",
+    "    # Function to create prediction visualization\n",
+    "    def create_prediction_visualization(data, predictions, title=\"ML Price Prediction\"):\n",
+    "        \"\"\"Create visualization of price predictions\"\"\"\n",
+    "        fig = go.Figure()\n",
+    "        \n",
+    "        # Add historical prices\n",
+    "        fig.add_trace(\n",
+    "            go.Candlestick(\n",
+    "                x=data.index,\n",
+    "                open=data['Open'],\n",
+    "                high=data['High'],\n",
+    "                low=data['Low'],\n",
+    "                close=data['Close'],\n",
+    "                name='Price'\n",
+    "            )\n",
+    "        )\n",
+    "        \n",
+    "        # Add historical predictions (as a line)\n",
+    "        historical = predictions['historical']\n",
+    "        \n",
+    "        # Calculate predicted prices based on predicted returns\n",
+    "        hist_dates = historical['predicted'].index\n",
+    "        hist_prices = data.loc[hist_dates, 'Close']\n",
+    "        predicted_prices = hist_prices * (1 + historical['predicted'])\n",
+    "        \n",
+    "        fig.add_trace(\n",
+    "            go.Scatter(\n",
+    "                x=hist_dates,\n",
+    "                y=predicted_prices,\n",
+    "                mode='lines',\n",
+    "                line=dict(color='blue', width=2, dash='dash'),\n",
+    "                name='Historical Predictions'\n",
+    "            )\n",
+    "        )\n",
+    "        \n",
+    "        # Add future predictions\n",
+    "        future = predictions['future']\n",
+    "        \n",
+    "        # Calculate future prices (starting from last close)\n",
+    "        last_close = data['Close'].iloc[-1]\n",
+    "        future_prices = pd.Series(index=future['dates'])\n",
+    "        future_prices.iloc[0] = last_close * (1 + future['predictions'].iloc[0])\n",
+    "        \n",
+    "        for i in range(1, len(future_prices)):\n",
+    "            future_prices.iloc[i] = future_prices.iloc[i-1] * (1 + future['predictions'].iloc[i])\n",
+    "        \n",
+    "        # Add future prediction line\n",
+    "        fig.add_trace(\n",
+    "            go.Scatter(\n",
+    "                x=future['dates'],\n",
+    "                y=future_prices,\n",
+    "                mode='lines',\n",
+    "                line=dict(color='green', width=3),\n",
+    "                name='Future Predictions'\n",
+    "            )\n",
+    "        )\n",
+    "        \n",
+    "        # Add confidence intervals\n",
+    "        upper_prices = pd.Series(index=future['dates'])\n",
+    "        lower_prices = pd.Series(index=future['dates'])\n",
+    "        \n",
+    "        upper_prices.iloc[0] = last_close * (1 + future['upper_band'].iloc[0])\n",
+    "        lower_prices.iloc[0] = last_close * (1 + future['lower_band'].iloc[0])\n",
+    "        \n",
+    "        for i in range(1, len(future_prices)):\n",
+    "            upper_prices.iloc[i] = upper_prices.iloc[i-1] * (1 + future['upper_band'].iloc[i])\n",
+    "            lower_prices.iloc[i] = lower_prices.iloc[i-1] * (1 + future['lower_band'].iloc[i])\n",
+    "        \n",
+    "        fig.add_trace(\n",
+    "            go.Scatter(\n",
+    "                x=future['dates'],\n",
+    "                y=upper_prices,\n",
+    "                mode='lines',\n",
+    "                line=dict(color='rgba(0,255,0,0.2)', width=0),\n",
+    "                name='Upper Bound'\n",
+    "            )\n",
+    "        )\n",
+    "        \n",
+    "        fig.add_trace(\n",
+    "            go.Scatter(\n",
+    "                x=future['dates'],\n",
+    "                y=lower_prices,\n",
+    "                mode='lines',\n",
+    "                line=dict(color='rgba(0,255,0,0.2)', width=0),\n",
+    "                fill='tonexty',\n",
+    "                name='Lower Bound'\n",
+    "            )\n",
+    "        )\n",
+    "        \n",
+    "        # Update layout\n",
+    "        fig.update_layout(\n",
+    "            title=title,\n",
+    "            xaxis_title=\"Date\",\n",
+    "            yaxis_title=\"Price\",\n",
+    "            height=600,\n",
+    "            width=1000,\n",
+    "            hovermode=\"x unified\",\n",
+    "            legend=dict(\n",
+    "                yanchor=\"top\",\n",
+    "                y=0.99,\n",
+    "                xanchor=\"left\",\n",
+    "                x=0.01\n",
+    "            )\n",
+    "        )\n",
+    "        \n",
+    "        return fig\n",
+    "    \n",
+    "    # Function to visualize feature importance\n",
+    "    def create_feature_importance_visualization(features, title=\"Feature Importance\"):\n",
+    "        \"\"\"Create visualization of feature importance\"\"\"\n",
+    "        # For demonstration, we'll create a simulated feature importance ranking\n",
+    "        # In a real application, this would come from your ML model\n",
+    "        \n",
+    "        importance = {\n",
+    "            'SMA20': 0.25,\n",
+    "            'SMA50': 0.15,\n",
+    "            'SMA200': 0.10,\n",
+    "            'EMA20': 0.20,\n",
+    "            'RS': 0.18,\n",
+    "            'Volatility': 0.12\n",
+    "        }\n",
+    "        \n",
+    "        # Sort by importance\n",
+    "        importance = {k: v for k, v in sorted(importance.items(), key=lambda item: item[1], reverse=True)}\n",
+    "        \n",
+    "        # Create bar chart\n",
+    "        fig = go.Figure(data=go.Bar(\n",
+    "            x=list(importance.keys()),\n",
+    "            y=list(importance.values()),\n",
+    "            marker_color='blue',\n",
+    "            text=[f\"{v:.2f}\" for v in importance.values()],\n",
+    "            textposition='auto'\n",
+    "        ))\n",
+    "        \n",
+    "        fig.update_layout(\n",
+    "            title=title,\n",
+    "            xaxis_title=\"Feature\",\n",
+    "            yaxis_title=\"Importance\",\n",
+    "            height=500,\n",
+    "            width=800\n",
+    "        )\n",
+    "        \n",
+    "        return fig\n",
+    "    \n",
+    "    # Generate predictions\n",
+    "    predictions = generate_simple_predictions(data)\n",
+    "    \n",
+    "    # Create prediction visualization\n",
+    "    prediction_fig = create_prediction_visualization(data, predictions)\n",
+    "    \n",
+    "    # Create feature importance visualization\n",
+    "    feature_importance_fig = create_feature_importance_visualization(\n",
+    "        ['SMA20', 'SMA50', 'SMA200', 'EMA20', 'RS', 'Volatility']\n",
+    "    )\n",
+    "    \n",
+    "    # Create a dashboard combining both visualizations\n",
+    "    dashboard = make_subplots(\n",
+    "        rows=2, cols=1,\n",
+    "        subplot_titles=(\n",
+    "            \"Price Prediction with ML\",\n",
+    "            \"Feature Importance\"\n",
+    "        ),\n",
+    "        vertical_spacing=0.1,\n",
+    "        row_heights=[0.7, 0.3]\n",
+    "    )\n",
+    "    \n",
+    "    # Add prediction chart\n",
+    "    for trace in prediction_fig.data:\n",
+    "        dashboard.add_trace(trace, row=1, col=1)\n",
+    "    \n",
+    "    # Add feature importance chart\n",
+    "    dashboard.add_trace(feature_importance_fig.data[0], row=2, col=1)\n",
+    "    \n",
+    "    # Update layout\n",
+    "    dashboard.update_layout(\n",
+    "        title=\"Machine Learning Integration Example\",\n",
+    "        height=900,\n",
+    "        width=1000,\n",
+    "        showlegend=True\n",
+    "    )\n",
+    "    \n",
+    "    return {\n",
+    "        'prediction_fig': prediction_fig,\n",
+    "        'feature_importance_fig': feature_importance_fig,\n",
+    "        'dashboard': dashboard,\n",
+    "        'predictions': predictions\n",
+    "    }\n",
+    "\n",
+    "# Create ML visualization examples\n",
+    "try:\n",
+    "    ml_examples = create_ml_visualization_examples(\n",
+    "        apple_data,\n",
+    "        viz_env['default_config']\n",
+    "    )\n",
+    "    \n",
+    "    # Display the dashboard\n",
+    "    ml_examples['dashboard'].show()\n",
+    "    \n",
+    "    print(\"Machine learning visualization examples created successfully\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Error creating ML visualization examples: {str(e)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
