created an export tools example

--- a/docs/examples/candlestick/pattern_visualization.ipynb
+++ b/docs/examples/candlestick/pattern_visualization.ipynb
@@ -10319,6 +10319,363 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## 4. Export and Publication Tools"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export and Publication Tools\n",
+    "def create_export_tools_examples(data, config):\n",
+    "    \"\"\"Create examples of export and publication tools for visualizations\"\"\"\n",
+    "    \n",
+    "    # Function to create a report-ready chart\n",
+    "    def create_report_chart(data, title=\"Stock Price Analysis\"):\n",
+    "        \"\"\"Create a clean, report-ready chart\"\"\"\n",
+    "        # Initialize visualizer\n",
+    "        visualizer = CandlestickVisualizer(data, config)\n",
+    "        \n",
+    "        # Create base chart\n",
+    "        fig = visualizer.create_candlestick_chart(\n",
+    "            use_plotly=True,\n",
+    "            show_volume=False,\n",
+    "            title=title\n",
+    "        )\n",
+    "        \n",
+    "        # Add moving averages for cleaner look\n",
+    "        fig.add_trace(\n",
+    "            go.Scatter(\n",
+    "                x=data.index,\n",
+    "                y=data['Close'].rolling(window=20).mean(),\n",
+    "                mode='lines',\n",
+    "                line=dict(color='blue', width=2),\n",
+    "                name='20-Day MA'\n",
+    "            )\n",
+    "        )\n",
+    "        \n",
+    "        fig.add_trace(\n",
+    "            go.Scatter(\n",
+    "                x=data.index,\n",
+    "                y=data['Close'].rolling(window=50).mean(),\n",
+    "                mode='lines',\n",
+    "                line=dict(color='red', width=2),\n",
+    "                name='50-Day MA'\n",
+    "            )\n",
+    "        )\n",
+    "        \n",
+    "        # Update layout for report style\n",
+    "        fig.update_layout(\n",
+    "            title=title,\n",
+    "            xaxis_title=\"Date\",\n",
+    "            yaxis_title=\"Price\",\n",
+    "            height=600,\n",
+    "            width=1000,\n",
+    "            margin=dict(l=50, r=50, t=80, b=50),\n",
+    "            plot_bgcolor='white',\n",
+    "            font=dict(\n",
+    "                family=\"Arial, sans-serif\",\n",
+    "                size=12,\n",
+    "                color=\"black\"\n",
+    "            ),\n",
+    "            legend=dict(\n",
+    "                orientation=\"h\",\n",
+    "                yanchor=\"bottom\",\n",
+    "                y=1.02,\n",
+    "                xanchor=\"right\",\n",
+    "                x=1\n",
+    "            )\n",
+    "        )\n",
+    "        \n",
+    "        # Add a watermark or source text\n",
+    "        fig.add_annotation(\n",
+    "            text=\"Source: PatternForge Visualization\",\n",
+    "            x=0.5,\n",
+    "            y=-0.15,\n",
+    "            xref=\"paper\",\n",
+    "            yref=\"paper\",\n",
+    "            showarrow=False,\n",
+    "            font=dict(size=10, color=\"gray\"),\n",
+    "            opacity=0.7\n",
+    "        )\n",
+    "        \n",
+    "        return fig\n",
+    "    \n",
+    "    # Function to create a summary table\n",
+    "    def create_summary_table(data):\n",
+    "        \"\"\"Create a summary table with key statistics\"\"\"\n",
+    "        # Calculate key statistics\n",
+    "        summary = {\n",
+    "            'Start Date': data.index[0].strftime('%Y-%m-%d'),\n",
+    "            'End Date': data.index[-1].strftime('%Y-%m-%d'),\n",
+    "            'Starting Price': f\"${data['Close'].iloc[0]:.2f}\",\n",
+    "            'Ending Price': f\"${data['Close'].iloc[-1]:.2f}\",\n",
+    "            'Return': f\"{(data['Close'].iloc[-1] / data['Close'].iloc[0] - 1) * 100:.2f}%\",\n",
+    "            'High': f\"${data['High'].max():.2f}\",\n",
+    "            'Low': f\"${data['Low'].min():.2f}\",\n",
+    "            'Volatility (Annualized)': f\"{data['Close'].pct_change().std() * np.sqrt(252) * 100:.2f}%\",\n",
+    "            'Avg. Volume': f\"{data['Volume'].mean():.0f}\"\n",
+    "        }\n",
+    "        \n",
+    "        # Create a DataFrame for the table\n",
+    "        df_summary = pd.DataFrame(list(summary.items()), columns=['Metric', 'Value'])\n",
+    "        \n",
+    "        # Create a table figure\n",
+    "        fig = go.Figure(data=[go.Table(\n",
+    "            header=dict(\n",
+    "                values=['Metric', 'Value'],\n",
+    "                fill_color='paleturquoise',\n",
+    "                align='left',\n",
+    "                font=dict(size=14)\n",
+    "            ),\n",
+    "            cells=dict(\n",
+    "                values=[df_summary['Metric'], df_summary['Value']],\n",
+    "                fill_color=['white', 'white'],\n",
+    "                align='left',\n",
+    "                font=dict(size=12)\n",
+    "            )\n",
+    "        )])\n",
+    "        \n",
+    "        fig.update_layout(\n",
+    "            title=\"Summary Statistics\",\n",
+    "            height=400,\n",
+    "            width=800\n",
+    "        )\n",
+    "        \n",
+    "        return fig\n",
+    "    \n",
+    "    # Function to create an annotated chart for publication\n",
+    "    def create_annotated_chart(data):\n",
+    "        \"\"\"Create an annotated chart highlighting key events\"\"\"\n",
+    "        # Create base chart\n",
+    "        fig = create_report_chart(data, title=\"Annotated Price Analysis\")\n",
+    "        \n",
+    "        # Find some key points to annotate (for demonstration)\n",
+    "        # Highest point\n",
+    "        highest_idx = data['High'].idxmax()\n",
+    "        highest_price = data.loc[highest_idx, 'High']\n",
+    "        \n",
+    "        # Lowest point\n",
+    "        lowest_idx = data['Low'].idxmin()\n",
+    "        lowest_price = data.loc[lowest_idx, 'Low']\n",
+    "        \n",
+    "        # Find a significant gap (for demonstration)\n",
+    "        daily_changes = data['Open'] - data['Close'].shift(1)\n",
+    "        significant_gaps = daily_changes.abs() > daily_changes.std() * 2\n",
+    "        gap_idx = significant_gaps[significant_gaps].index[0] if any(significant_gaps) else None\n",
+    "        \n",
+    "        # Add annotations\n",
+    "        fig.add_annotation(\n",
+    "            x=highest_idx,\n",
+    "            y=highest_price,\n",
+    "            text=\"Peak Price\",\n",
+    "            showarrow=True,\n",
+    "            arrowhead=2,\n",
+    "            bgcolor=\"white\",\n",
+    "            bordercolor=\"black\",\n",
+    "            borderwidth=1\n",
+    "        )\n",
+    "        \n",
+    "        fig.add_annotation(\n",
+    "            x=lowest_idx,\n",
+    "            y=lowest_price,\n",
+    "            text=\"Bottom\",\n",
+    "            showarrow=True,\n",
+    "            arrowhead=2,\n",
+    "            bgcolor=\"white\",\n",
+    "            bordercolor=\"black\",\n",
+    "            borderwidth=1\n",
+    "        )\n",
+    "        \n",
+    "        if gap_idx:\n",
+    "            fig.add_annotation(\n",
+    "                x=gap_idx,\n",
+    "                y=data.loc[gap_idx, 'Open'],\n",
+    "                text=\"Significant Gap\",\n",
+    "                showarrow=True,\n",
+    "                arrowhead=2,\n",
+    "                bgcolor=\"white\",\n",
+    "                bordercolor=\"black\",\n",
+    "                borderwidth=1\n",
+    "            )\n",
+    "\n",
+    "        # Add a trend line (for demonstration)\n",
+    "        start_date = data.index[len(data) // 4]\n",
+    "        end_date = data.index[len(data) * 3 // 4]\n",
+    "        start_price = data.loc[start_date, 'Close']\n",
+    "        end_price = data.loc[end_date, 'Close']\n",
+    "\n",
+    "        fig.add_shape(\n",
+    "            type=\"line\",\n",
+    "            x0=start_date,\n",
+    "            y0=start_price,\n",
+    "            x1=end_date,\n",
+    "            y1=end_price,\n",
+    "            line=dict(\n",
+    "                color=\"purple\",\n",
+    "                width=2,\n",
+    "                dash=\"dash\"\n",
+    "            )\n",
+    "        )\n",
+    "\n",
+    "        fig.add_annotation(\n",
+    "            x=end_date,\n",
+    "            y=end_price,\n",
+    "            text=\"Trend Line\",\n",
+    "            showarrow=True,\n",
+    "            arrowhead=2,\n",
+    "            bgcolor=\"white\",\n",
+    "            bordercolor=\"black\",\n",
+    "            borderwidth=1\n",
+    "        )\n",
+    "\n",
+    "        return fig\n",
+    "\n",
+    "    # Function to create a publication-ready dashboard\n",
+    "    def create_publication_dashboard(data):\n",
+    "        \"\"\"Create a dashboard with multiple elements ready for export/publication\"\"\"\n",
+    "        # Create dashboard with multiple panels\n",
+    "        dashboard = make_subplots(\n",
+    "            rows=2, cols=2,\n",
+    "            subplot_titles=(\n",
+    "                \"Price Chart\",\n",
+    "                \"Summary Statistics\",\n",
+    "                \"Volume Analysis\",\n",
+    "                \"Performance Metrics\"\n",
+    "            ),\n",
+    "            specs=[\n",
+    "                [{\"type\": \"scatter\"}, {\"type\": \"table\"}],\n",
+    "                [{\"type\": \"bar\"}, {\"type\": \"scatter\"}]\n",
+    "            ],\n",
+    "            vertical_spacing=0.1,\n",
+    "            horizontal_spacing=0.1\n",
+    "        )\n",
+    "        \n",
+    "        # Add price chart\n",
+    "        report_chart = create_report_chart(data, title=\"\")\n",
+    "        for trace in report_chart.data:\n",
+    "            dashboard.add_trace(trace, row=1, col=1)\n",
+    "        \n",
+    "        # Add summary table\n",
+    "        summary_table = create_summary_table(data)\n",
+    "        dashboard.add_trace(summary_table.data[0], row=1, col=2)\n",
+    "        \n",
+    "        # Add volume analysis\n",
+    "        dashboard.add_trace(\n",
+    "            go.Bar(\n",
+    "                x=data.index,\n",
+    "                y=data['Volume'],\n",
+    "                marker_color=['green' if c >= o else 'red' \n",
+    "                            for c, o in zip(data['Close'], data['Open'])],\n",
+    "                name='Volume'\n",
+    "            ),\n",
+    "            row=2, col=1\n",
+    "        )\n",
+    "        \n",
+    "        # Add volume moving average\n",
+    "        dashboard.add_trace(\n",
+    "            go.Scatter(\n",
+    "                x=data.index,\n",
+    "                y=data['Volume'].rolling(window=20).mean(),\n",
+    "                line=dict(color='blue', width=2),\n",
+    "                name='20-Day Vol MA'\n",
+    "            ),\n",
+    "            row=2, col=1\n",
+    "        )\n",
+    "        \n",
+    "        # Add performance metrics (rolling returns)\n",
+    "        dashboard.add_trace(\n",
+    "            go.Scatter(\n",
+    "                x=data.index,\n",
+    "                y=data['Close'].pct_change(20) * 100,\n",
+    "                line=dict(color='purple', width=2),\n",
+    "                name='1-Month Return (%)'\n",
+    "            ),\n",
+    "            row=2, col=2\n",
+    "        )\n",
+    "        \n",
+    "        dashboard.add_trace(\n",
+    "            go.Scatter(\n",
+    "                x=data.index,\n",
+    "                y=data['Close'].pct_change(60) * 100,\n",
+    "                line=dict(color='orange', width=2),\n",
+    "                name='3-Month Return (%)'\n",
+    "            ),\n",
+    "            row=2, col=2\n",
+    "        )\n",
+    "        \n",
+    "        # Update layout for publication\n",
+    "        dashboard.update_layout(\n",
+    "            title=\"Stock Analysis Report\",\n",
+    "            height=1000,\n",
+    "            width=1200,\n",
+    "            showlegend=True,\n",
+    "            legend=dict(\n",
+    "                orientation=\"h\",\n",
+    "                yanchor=\"bottom\",\n",
+    "                y=1.02,\n",
+    "                xanchor=\"right\",\n",
+    "                x=1\n",
+    "            ),\n",
+    "            font=dict(\n",
+    "                family=\"Arial, sans-serif\",\n",
+    "                size=12\n",
+    "            ),\n",
+    "            margin=dict(l=50, r=50, t=80, b=50)\n",
+    "        )\n",
+    "        \n",
+    "        # Add export information\n",
+    "        dashboard.add_annotation(\n",
+    "            text=\"Generated by PatternForge - For Publication\",\n",
+    "            x=0.5,\n",
+    "            y=-0.05,\n",
+    "            xref=\"paper\",\n",
+    "            yref=\"paper\",\n",
+    "            showarrow=False,\n",
+    "            font=dict(size=10, color=\"gray\"),\n",
+    "            opacity=0.7\n",
+    "        )\n",
+    "        \n",
+    "        return dashboard\n",
+    "\n",
+    "    # Create example export-ready visualizations\n",
+    "    report_chart = create_report_chart(data)\n",
+    "    summary_table = create_summary_table(data)\n",
+    "    annotated_chart = create_annotated_chart(data)\n",
+    "    publication_dashboard = create_publication_dashboard(data)\n",
+    "\n",
+    "    # Return examples\n",
+    "    return {\n",
+    "        'report_chart': report_chart,\n",
+    "        'summary_table': summary_table,\n",
+    "        'annotated_chart': annotated_chart,\n",
+    "        'publication_dashboard': publication_dashboard\n",
+    "    }\n",
+    "\n",
+    "# Create export tools examples\n",
+    "try:\n",
+    "    export_examples = create_export_tools_examples(\n",
+    "        apple_data,\n",
+    "        viz_env['default_config']\n",
+    "    )\n",
+    "    \n",
+    "    # Display examples\n",
+    "    export_examples['report_chart'].show()\n",
+    "    export_examples['summary_table'].show()\n",
+    "    export_examples['annotated_chart'].show()\n",
+    "    export_examples['publication_dashboard'].show()\n",
+    "    \n",
+    "    print(\"Export and publication tools examples created successfully\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Error creating export tools examples: {str(e)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
